# light_io

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
include/light_io/: lio_config.h  lio_files.h  lio_paths.h  lio_utils.h
src/: lio_files.c  lio_paths.c  lio_paths_nix.c  lio_paths_win.c  lio_utils.c
test/: path_test.c
